--- a/style.css
+++ b/style.css
@@ -18,3 +18,19 @@ body {
     color: white !important;
     background-color: #3b5998;
   }
+
+  #loading {
+    display: none;
+    position: absolute;
+    top: 20%;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 2;
+    background-image: url(loading.gif);
+    background-repeat: no-repeat;
+    background-position: center;
+    height:50%;
+    width: 50%;
+    margin: auto;
+  }
